# mcp-servers

./: .dockerignore  LICENSE  Makefile  README.md
mcp-artifact-registry/: DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  example.py  pyproject.toml  pytest.ini  server.py
mcp-artifact-registry/test/: __init__.py  test_ar_api.py  test_integration.py  test_tools.py
mcp-fetch/: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  server.py
mcp-fetch/test/: __init__.py  test_integration.py  test_tools.py
mcp-ip/: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  server.py
mcp-ip/test/: __init__.py  test_integration.py  test_ip_api.py  test_tools.py
mcp-search/: LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  server.py
mcp-search/test/: test_integration.py  test_search_api.py  test_tools.py
mcp-ufc/: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  server.py
mcp-ufc/test/: __init__.py  test_tools.py  test_ufc_tools.py
mcp-weather/: .gitignore  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  server.py
mcp-weather/test/: README.md  __init__.py  run_tests.py  test_integration.py  test_tools.py  test_weather_api.py
mcp-wikipedia/: LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  server.py
mcp-wikipedia/api/: wikipedia_client.py
mcp-wikipedia/test/: __init__.py  test_integration.py  test_tools.py  test_wikipedia_api.py
mcp-wikipedia/tools/: wikipedia_tools.py
mcp-wikipedia/utils/: formatters.py
mcp-yandex-search/: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  server.py
mcp-yandex-search/test/: __init__.py  test_integration.py  test_tools.py  test_yandex_api.py
